# tree-sitter-linkerscript

./: CHANGELOG.md  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterLinkerscript/: linkerscript.h
src/: grammar.json  node-types.json  parser.c
